# example-test-hidden-definitions

./: example.cabal
src/: Foo.hs
test/: TestFoo.hs
